@@ -53,9 +53,9 @@ AS_CASE([$enable_libtool_hack],
                    [enable_libtool_hack=no],
                  [enable_libtool_hack=yes])
          ac_configure_args="$ac_configure_args '--enable-libtool-hack=$enable_libtool_hack'"])
-AS_CASE([$enable_shared],
-        [no], [:],
-        [yes ], [AS_IF([test "x$enable_native_texlive_build" = xyes],
+AS_CASE([$enable_shared:$host_os],
+        [no:* | yes:mingw* | yes:cygwin*], [:],
+        [yes:* ], [AS_IF([test "x$enable_native_texlive_build" = xyes],
                        [AC_MSG_ERROR([you can not use a shared Kpathsea library for a native TeX Live build])])],
         [enable_shared=no
          ac_configure_args="$ac_configure_args '--disable-shared'"])
